<resources>
    <string name="app_name">TodoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_low">Normal</string>
    <string name="edit_save">UPDATE LIST</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit_priority">Priority</string>
    <string name="edit_high">Critical</string>
    <string name="edit_medium">High</string>
    <string name="edit_title">Title</string>
    <string name="edit_description">Description</string>
    <string name="edit_date">Date</string>
    <string name="alert_cancel">Current changes not saved. Still exit?</string>
    <string name="alert_delete">Your account will be permanently deleted</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="delete">DELETE ACCOUNT</string>
    <string name="submit">CONFIRM</string>
    <string name="edit_password">Edit Password</string>
</resources>